@@ -1,4 +1,5 @@
 ﻿	* Add Helpers.Argument.ValidateLength(T[]) overload for disambiguation.
+	* EmbeddedPackage now keeps open handles to extracted files, to help keep them alive against temp file cleanup.
 
 14.1.0
 	* Add WidevineConstants.SystemId.
